Modify format of h2 and p label

--- a/git.css
+++ b/git.css
@@ -2,3 +2,14 @@ body
 {
     background-color: rgb(43, 226, 180);
 }
+h2
+{
+    color: beige;
+    text-align: center;
+}
+p
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    text-align: center;
+}
